web/htdocs/style/gui.css
body {
	color: #ddd;
	font-family: "Lucida Grande", Arial, sans-serif;
	font-size: 14px;
}

/* Preload images */
body:after {
	content:
	url('../images/center_cam_sel.png')
	url('../images/next_vp_sel.png')
	url('../images/prev_vp_sel.png')
	url('../images/ul_btn_selected.png')
	url('../images/addlayer_active.png')
	url('../images/remlayer_active.png')
	url('../images/lpcollapse_on.png');
	
	display: none;
}

#striptop {
	position: fixed;
	height: 5px;
	width: 100%;
	background-color: #000;
}

#tooltip {
	position: fixed;
	left: 9px;
	bottom: 6px;
	
	font-size: 11px;
	color: #f00;
}

#hidden_div {
	position: fixed;
	top: -1000px;
	left: -1000px;
	opacity: 0;
}

/* Layer panel * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * */

#layer_panel {
	position: fixed;
	bottom: 26px;
	right: 0px;
}

#layer_panel_dynamic {
	border-top-left-radius: 13px;
	text-shadow: 1px 1px 0px #222;
	background-color: #000;
}

#layer_panel_control_strip {
	border-bottom: 1px solid #333;
	border-bottom-left-radius: 13px;
	color: #888;
	background-image: url('../images/cstripbg.png');
}

#layer_panel_dynamic, #layer_panel_control_strip {
	border-left: 1px solid #333;
}

.layer_panel_row {
	width: 206px;
	height: 17px;
	padding: 4px 4px 5px 4px;
	border-bottom: 1px solid #444;
	
	overflow: hidden;
}

.layer_panel_row.guiBtnToggled {
	background: url('../images/layer_row_selected.png') repeat-x;
}

.layer_panel_row.guiBtnDisabled {
	color: #686868;
	text-shadow: none;
}

.layer_panel_row.ghost {
	opacity: 0.5;
	border-top-left-radius: 13px;
	border-bottom-left-radius: 13px;
	border-bottom: 0;
	
	background: url('../images/layer_row_ghost.png') repeat-y;
}

#layer_panel_control_strip .layer_panel_row {
	border-bottom: 0;
	cursor: auto;
}

.layer_name {
	float: left;
	cursor: default;
	
	margin-top: 1px;
	margin-left: 4px;
	max-width: 150px;
	
	overflow: hidden;
	white-space: nowrap;
	text-overflow: ellipsis;
	-o-text-overflow: ellipsis;
}

.visibility_toggle,
.new_layer_button,
.delete_layer_button,
.lp_collapse_button {
	width: 18px;
	height: 18px;
	margin-left: 4px;
	
	background-repeat: no-repeat;
	background-position: center;
	
	float: left;
	
	cursor: pointer;
}

.visibility_toggle {
	width: 24px;
	background-image: url('../images/vistog_on.png');
}

.visibility_toggle.guiBtnToggled {
	background-image: url('../images/vistog.png');
}

.visibility_toggle.guiBtnDisabled {
	background-image: url('../images/vistog_disabled.png');
}

.new_layer_button {
	float: right;
	background-image: url('../images/addlayer.png');
}

.new_layer_button:active {
	float: right;
	background-image: url('../images/addlayer_active.png');
}

.delete_layer_button {
	float: right;
	background-image: url('../images/remlayer.png');
}

.delete_layer_button:active {
	background-image: url('../images/remlayer_active.png');
}

.delete_layer_button.guiBtnDisabled {
	background-image: url('../images/remlayer_disabled.png');
}

.lp_collapse_button {
	margin-left: 0px;
	background-image: url('../images/lpcollapse.png');
}

.lp_collapse_button.guiBtnToggled {
	background-image: url('../images/lpcollapse_on.png');
}

.color_well {
	width: 16px;
	height: 16px;
	margin: 1px;
	
	float: left;
	
	border-radius: 8px;
	
	box-shadow: inset -1px -1px 0px rgba(255, 255, 255, 0.75), inset 1px 1px 3px rgba(0, 0, 0, 0.5);
	-o-box-shadow: inset -1px -1px 0px rgba(255, 255, 255, 0.75), inset 1px 1px 3px rgba(0, 0, 0, 0.5);
	-moz-box-shadow: inset -1px -1px 0px rgba(255, 255, 255, 0.75), inset 1px 1px 3px rgba(0, 0, 0, 0.5);
	-webkit-box-shadow: inset -1px -1px 0px rgba(255, 255, 255, 0.75), inset 1px 1px 3px rgba(0, 0, 0, 0.5);
	
	cursor: pointer;
}

.layer_name_input {
	position: relative;
	right: -4px;
	top: -3px;
	
	margin: 0;
	
	width: 153px;
	
	font-family: "Lucida Grande", Arial, sans-serif;
	font-size: 14px;
}

input.color {
	position: relative;
	margin-right: -7px;
	right: 6px;
	
	padding: 0;
	
	width: 1px;
	height: 1px;
	
	float: left;
	visibility: hidden;
}

#insertmark {
	position: fixed;
	right: 0px;
	width: 180px;
	height: 26px;
	background-image: url('../images/linsert.png');
	pointer-events: none;
}

/* Menus * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * */

#menubar {
	position: fixed;
	left: 31px;
	top: 0px;	
	height: 29px;
	border-bottom-left-radius: 5px;
	border-bottom-right-radius: 5px;
	
	padding: 0 5px 0 5px;
	
	cursor: default;
	background-color: #000;
}

#menubar * {
	float: left;
}

.mb_vr {
	width: 1px;
	height: 29px;
	
	background-color: #444;
}

ul.menu {
	margin: 0;
	padding: 4px 0 5px 0;
	border-bottom-left-radius: 5px;
	border-bottom-right-radius: 5px;
	border-top-right-radius: 5px;
	
	list-style-type: none;
	cursor: default;
	background-color: #000;
	
	box-shadow: 0px 6px 10px rgba(0, 0, 0, 0.4);
	-webkit-box-shadow: 0px 6px 10px rgba(0, 0, 0, 0.4);
}

ul.menu li {
	padding: 0 10px 2px 20px;
}

ul.menu li.guiMenuDisabled, ul.menu li.guiMenuDisabled:hover {
	color: #666666;
	background: none;
}

ul.menu li:hover {
	color: #fff;
	background: #35d url('../images/layer_row_selected.png') repeat-x;
}

ul.menu li * {
	pointer-events: none;
}

/* Menu horizontal rule */
ul.menu li.mi_hr hr {
	border: 0;
	height: 1px;
	background-color: #555;
}

ul.menu li.mi_hr, ul.menu li.mi_hr:hover {
	padding: 0;
}

.mi_name {
	float: left;
}

.mi_spacer {
	visibility: hidden;
}

.mi_scut {}

#file_menu .mi_name {
	width: 95px;
}

#edit_menu .mi_name {
	width: 105px;
}

.mb_btn {
	height: 19px;
	padding: 7px 6px 3px 6px;
}

.guiMenuOpened {
	color: #fff;
	background: #35d url('../images/layer_row_selected.png') bottom repeat-x;
}

#file_menu_btn {
	padding-right: 10px;
}

#edit_menu_btn {
	padding-left: 10px;
}

#ul_menu_btn {
	width: 20px;
	background: url('../images/ul_btn.png') center no-repeat;
}

#ul_menu_btn.guiMenuOpened {
	background-color: #35d;
	background-image: url('../images/layer_row_selected.png'), url('../images/ul_btn_selected.png');
	background-repeat: repeat-x, no-repeat;
	background-position: bottom, center;
}

.btn_wrapper {
	margin: 4px 4px 0 4px;
	background: #666;
	border-radius: 6px;
	
	font-size: 11px;
}

#ul_slider_cab {
	overflow: hidden;
}

#ul_slider_cab label {
	margin: 1px 2px 0 2px;
}

#ul_slider_wrapper {
	margin-top: 2px;
}

#ul_opac_slider {
	width: 100px;
}

.top_btn {
	width: 20px;
	height: 20px;
	padding: 1px 5px 0 5px;
}

#center_cam_btn {
	background: url('../images/center_cam.png') center no-repeat;
}

#center_cam_btn:active {
	background-image: url('../images/center_cam_sel.png');
}

#next_vp_btn {
	background: url('../images/next_vp.png') center no-repeat;
}

#next_vp_btn:active {
	background-image: url('../images/next_vp_sel.png');
}

#prev_vp_btn {
	background: url('../images/prev_vp.png') center no-repeat;
}

#prev_vp_btn:active {
	background-image: url('../images/prev_vp_sel.png');
}

/* Tools * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * */

#toolbar {
	position: fixed;
	left: 0px;
	top: 35px;	
	width: 26px;
	
	border-width: 4px 4px 4px 1px;
	border-style: solid;
	border-color: #000;
	border-top-right-radius: 9px;
	border-bottom-right-radius: 9px;
	
	cursor: default;
	background: #666;
}

/* Toolbar horizontal rule */
.tb_hr {
	width: 26px;
	height: 1px;
	
	background-color: #464646;
	border-bottom: 1px solid #7c7c7c;
}

.side_btn > div {
	width: 26px;
	height: 26px;
}

.side_btn.guiBtnToggled {
	background: url('../images/layer_row_selected.png') repeat-x;
}

#select_tool_btn_gfx {
	background: url('../images/select_tool_btn.png') center no-repeat;
}

#line_tool_btn_gfx {
	background: url('../images/line_tool_btn.png') center no-repeat;
}

#arc_tool_btn_gfx {
	background: url('../images/arc_tool_btn.png') center no-repeat;
}

#bez_tool_btn {
	background: url('../images/bez_tool_btn.png') center no-repeat;
}

#para_line_tool_btn {
	background: url('../images/para_line_tool_btn.png') center no-repeat;
}

#perp_line_tool_btn {
	background: url('../images/perp_line_tool_btn.png') center no-repeat;
}

#rect_tool_btn {
	background: url('../images/rect_tool_btn.png') center no-repeat;
}

#circ_tool_menu_btn_gfx.rad {
	background-image: url('../images/circ_rad_tool_btn.png'), url('../images/expand.png');
	background-position: center, right 19px;
	background-repeat: no-repeat;
}

/*#circ_dia_tool_btn {
	background: url('../images/circ_dia_tool_btn.png') center no-repeat;
}*/

#pp_tool_menu_btn_gfx.pp3 {
	background-image: url('../images/1pp_tool_btn.png'), url('../images/expand.png');
	background-position: center, right 19px;
	background-repeat: no-repeat;
}

/*#pp2_tool_btn {
	background: url('../images/2pp_tool_btn.png') center no-repeat;
}

#pp3_tool_btn {
	background: url('../images/3pp_tool_btn.png') center no-repeat;
}*/

